    check methods (ivanmi)

    HADOOP-9981. globStatus should minimize its listStatus and getFileStatus
    calls.  (Contributed by Colin Patrick McCabe)

Release 2.2.0 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

Release 2.1.2 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-9776. HarFileSystem.listStatus() returns invalid authority if port
    number is empty. (Shanyu Zhao via ivanmi)

    HADOOP-9761.  ViewFileSystem#rename fails when using DistributedFileSystem.
    (Andrew Wang via Colin Patrick McCabe)

Release 2.1.1-beta - 2013-09-23

  INCOMPATIBLE CHANGES

    HADOOP-9944. Fix RpcRequestHeaderProto.callId to be sint32 rather than
    uint32 since ipc.Client.CONNECTION_CONTEXT_CALL_ID is signed (i.e. -3) 
    (acmurthy)

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-9910. proxy server start and stop documentation wrong
    (Andre Kelpe via harsh)

    HADOOP-9446. Support Kerberos SPNEGO for IBM JDK. (Yu Gao via llu)

    HADOOP-9787. ShutdownHelper util to shutdown threads and threadpools.
    (Karthik Kambatla via Sandy Ryza)

    HADOOP-9803. Add a generic type parameter to RetryInvocationHandler.
    (szetszwo)

    HADOOP-9821. ClientId should have getMsb/getLsb methods. 
    (Tsuyoshi OZAWA via jing9)

    HADOOP-9435.  Support building the JNI code against the IBM JVM.
    (Tian Hong Wang via Colin Patrick McCabe)

    HADOOP-9833 move slf4j to version 1.7.5 (Kousuke Saruta via stevel)

    HADOOP-9672. Upgrade Avro dependency to 1.7.4. (sandy via kihwal)

    HADOOP-9789. Support server advertised kerberos principals (daryn)

    HADOOP-8814. Replace string equals "" by String#isEmpty().
    (Brandon Li via suresh)

    HADOOP-9802. Support Snappy codec on Windows. (cnauroth)

    HADOOP-9879. Move the version info of zookeeper dependencies to
    hadoop-project/pom (Karthik Kambatla via Sandy Ryza)
    